# analisis

./: .gitignore  README.md  pyproject.toml
scripts/: analyze_data.py  download_data.py
src/electrocampos_api/: __init__.py  analysis.py  client.py
tests/: test_client.py
