[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "electrocampos-analisis"
version = "0.1.0"
description = "Análisis de mediciones de exposición a campos electromagnéticos en Colombia"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.13"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
